Fixed vertical alignment of header

--- a/client/www/index.css
+++ b/client/www/index.css
@@ -14,6 +14,17 @@ body {
   padding: 5px;
   color: #eee;
   font-size: 25px;
+  display:flex;
+  align-items:center;  
+}
+
+#scores {
+  margin-left: auto;
+  margin-right: 5px;
+}
+
+#me {
+  margin-left: 10px;
 }
 
 #content {
